[gd_scene load_steps=19 format=3 uid="uid://p58fom250kv0"]

[ext_resource type="Script" path="res://Scene/feature_chooser_ui.gd" id="1_eucfm"]
[ext_resource type="Shader" path="res://Scene/Blur.gdshader" id="1_krqgw"]
[ext_resource type="Texture2D" uid="uid://totoi4gofejm" path="res://ImageAssets/BG Godot UI.png" id="2_gl2t5"]
[ext_resource type="Texture2D" uid="uid://ddofncep5nh56" path="res://ImageAssets/enemy1_programmerart_64.png" id="3_5tjur"]
[ext_resource type="Texture2D" uid="uid://cmvq7i5mkbdji" path="res://ImageAssets/fly1 (20240321023820).png" id="4_jumbo"]
[ext_resource type="Texture2D" uid="uid://mkl2jw4gbx4e" path="res://ImageAssets/Enemy3/enemy3_0005_3.png" id="5_thw8f"]
[ext_resource type="Texture2D" uid="uid://bhrjflbuiikul" path="res://ImageAssets/player_idle1_programmerart_64.png" id="6_8njgr"]
[ext_resource type="Texture2D" uid="uid://hrmxcdr3lett" path="res://ImageAssets/TilesAndStonesbyPol/rocktrap.png" id="7_ntk0m"]
[ext_resource type="Texture2D" uid="uid://7kqtu887rjw0" path="res://ImageAssets/Coin.png" id="8_2sxbo"]
[ext_resource type="Texture2D" uid="uid://dqkj1hcdda7pv" path="res://ImageAssets/Slime.png" id="9_vvtcn"]
[ext_resource type="Texture2D" uid="uid://tcv5cg0xe0rj" path="res://ImageAssets/Gate.png" id="10_khucr"]
[ext_resource type="Texture2D" uid="uid://c6p6dq3rbudx3" path="res://ImageAssets/Pot.png" id="11_fidlx"]
[ext_resource type="Texture2D" uid="uid://d2rrm0wgymmxe" path="res://ImageAssets/Frog_1.png" id="12_5ovop"]
[ext_resource type="Texture2D" uid="uid://djupu0ttnro4v" path="res://ImageAssets/player_dash_programmerart_64.png" id="13_yovpi"]
[ext_resource type="Script" path="res://Scripts/Pre-req_comp.gd" id="14_gjsda"]
[ext_resource type="Texture2D" uid="uid://k5sxd47omogv" path="res://ImageAssets/StickyNote.png" id="14_qog2j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tt18p"]
shader = ExtResource("1_krqgw")
shader_parameter/step = null
shader_parameter/radius = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v4fcm"]

[node name="FeatureChooserUI" type="Control"]
self_modulate = Color(0.423529, 0.631373, 0.631373, 0.745098)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eucfm")

[node name="Background_Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("2_gl2t5")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_tt18p")
layout_mode = 0
offset_right = 1281.0
offset_bottom = 723.0
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 200.0
offset_top = 104.0
offset_right = -259.0
offset_bottom = 136.0
grow_horizontal = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 23
bbcode_enabled = true
text = "[center]Choose one feature to add..."
fit_content = true

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_v4fcm")
layout_mode = 0
offset_left = 329.0
offset_top = 110.0
offset_right = 1420.0
offset_bottom = 621.0

[node name="Enemy_1" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -190.5
offset_right = -1002.0
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Enemy_1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center][b] Chasing Enemy"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Enemy_1"]
layout_mode = 0
offset_left = 17.0
offset_top = 17.0
offset_right = 86.0
offset_bottom = 81.0
scale = Vector2(0.845, 0.845)
texture = ExtResource("3_5tjur")

[node name="Added" type="RichTextLabel" parent="Panel/Enemy_1"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 95.0
offset_bottom = 44.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Enemy_2" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 119.0
offset_top = -189.5
offset_right = -873.0
offset_bottom = -78.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Enemy_2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -37.0
offset_right = -1.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center][b] Flying Enemy"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Enemy_2"]
layout_mode = 0
offset_left = 15.0
offset_top = 20.0
offset_right = 84.0
offset_bottom = 84.0
texture = ExtResource("4_jumbo")

[node name="Added" type="RichTextLabel" parent="Panel/Enemy_2"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 95.0
offset_bottom = 47.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Enemy_3" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 255.0
offset_top = -197.5
offset_right = -737.0
offset_bottom = -86.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Enemy_3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -31.0
offset_right = -3.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center][b] Range Enemy"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Enemy_3"]
layout_mode = 0
offset_left = 13.0
offset_top = 24.0
offset_right = 82.0
offset_bottom = 88.0
texture = ExtResource("5_thw8f")

[node name="Added" type="RichTextLabel" parent="Panel/Enemy_3"]
visible = false
layout_mode = 0
offset_top = 11.0
offset_right = 90.0
offset_bottom = 51.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Slime" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 383.0
offset_top = -190.5
offset_right = -609.0
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Slime"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -35.0
offset_right = -1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]Slime[/b]
Slows player down"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Slime"]
layout_mode = 0
offset_left = -25.0
offset_top = -7.0
offset_right = 174.0
offset_bottom = 150.0
scale = Vector2(0.695, 0.695)
texture = ExtResource("9_vvtcn")

[node name="Added" type="RichTextLabel" parent="Panel/Slime"]
visible = false
layout_mode = 0
offset_top = 4.0
offset_right = 90.0
offset_bottom = 44.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Puzzle" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 516.0
offset_top = -190.5
offset_right = -476.0
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Puzzle"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]Puzzle[/b]
Find the key to unlock the gate"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Puzzle"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 203.0
offset_bottom = 165.0
scale = Vector2(0.435, 0.435)
texture = ExtResource("10_khucr")

[node name="Added" type="RichTextLabel" parent="Panel/Puzzle"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 95.0
offset_bottom = 44.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Trap" type="Panel" parent="Panel"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 631.0
offset_top = -190.5
offset_right = -361.0
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Trap"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center][b] Trap"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Trap"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -33.5
offset_right = 51.5
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.54, 0.54)
texture = ExtResource("7_ntk0m")

[node name="Added" type="RichTextLabel" parent="Panel/Trap"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 45.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Pots" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -24.5
offset_right = -1015.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Pots"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center][b]Breakable items"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Pots"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 83.0
offset_bottom = 75.0
texture = ExtResource("11_fidlx")

[node name="Added" type="RichTextLabel" parent="Panel/Pots"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_right = 96.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Visuals" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 89.0
offset_top = -23.5
offset_right = -903.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Visuals"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -29.0
offset_right = -4.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]Visuals[/b]
Add art assets"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Visuals"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 83.0
offset_bottom = 75.0
texture = ExtResource("6_8njgr")

[node name="Added" type="RichTextLabel" parent="Panel/Visuals"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_right = 95.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Coins" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 202.0
offset_top = -21.5
offset_right = -790.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Coins"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -40.0
offset_right = -1.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]Collectibles"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Coins"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 83.0
offset_bottom = 75.0
texture = ExtResource("8_2sxbo")

[node name="Added" type="RichTextLabel" parent="Panel/Coins"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = -12.0
offset_right = 92.0
offset_bottom = 28.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Dash" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 316.0
offset_top = -21.5
offset_right = -676.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Dash"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -45.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]Dash[/b]
Shift/Space to dash"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Dash"]
layout_mode = 0
offset_left = 20.0
offset_top = 9.0
offset_right = 302.0
offset_bottom = 196.0
scale = Vector2(0.305, 0.305)
texture = ExtResource("13_yovpi")
stretch_mode = 4

[node name="Added" type="RichTextLabel" parent="Panel/Dash"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = -14.0
offset_right = 94.0
offset_bottom = 26.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Error" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 423.0
offset_top = -21.5
offset_right = -569.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Error"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -45.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]3d World[/b]
Open world game mode"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Error"]
layout_mode = 0
offset_left = 20.0
offset_top = 9.0
offset_right = 302.0
offset_bottom = 196.0
scale = Vector2(0.305, 0.305)
texture = ExtResource("13_yovpi")
stretch_mode = 4

[node name="Added" type="RichTextLabel" parent="Panel/Error"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = -14.0
offset_right = 94.0
offset_bottom = 26.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Story" type="Panel" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 514.0
offset_top = -12.5
offset_right = -478.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Story"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -37.0
offset_right = 5.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]Story"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Story"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 314.0
offset_bottom = 213.0
scale = Vector2(0.305, 0.305)
texture = ExtResource("14_qog2j")
stretch_mode = 4

[node name="Added" type="RichTextLabel" parent="Panel/Story"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 30.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Skip" type="Panel" parent="Panel"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 644.0
offset_top = -10.5
offset_right = -348.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Panel/Skip"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -38.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center] [b]Skip Button"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Panel/Skip"]
layout_mode = 0
offset_left = -8.0
offset_top = 5.0
offset_right = 366.0
offset_bottom = 192.0
scale = Vector2(0.305, 0.305)
texture = ExtResource("12_5ovop")
stretch_mode = 4

[node name="Added" type="RichTextLabel" parent="Panel/Skip"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = -13.0
offset_right = 95.0
offset_bottom = 27.0
theme_override_colors/default_color = Color(0.45098, 0.866667, 0.980392, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Added"

[node name="Pre-req_comp" type="Node2D" parent="."]
visible = false
script = ExtResource("14_gjsda")

[connection signal="focus_entered" from="Panel/Enemy_1" to="." method="_on_enemy_1_focus_entered"]
[connection signal="focus_exited" from="Panel/Enemy_1" to="." method="_on_enemy_1_focus_exited"]
[connection signal="gui_input" from="Panel/Enemy_1" to="." method="_on_enemy_1_gui_input"]
[connection signal="mouse_exited" from="Panel/Enemy_1" to="." method="_on_enemy_1_mouse_exited"]
[connection signal="gui_input" from="Panel/Enemy_2" to="." method="_on_enemy_2_gui_input"]
[connection signal="mouse_exited" from="Panel/Enemy_2" to="." method="_on_enemy_2_mouse_exited"]
[connection signal="gui_input" from="Panel/Enemy_3" to="." method="_on_enemy_3_gui_input"]
[connection signal="mouse_exited" from="Panel/Enemy_3" to="." method="_on_enemy_3_mouse_exited"]
[connection signal="gui_input" from="Panel/Slime" to="." method="_on_slime_gui_input"]
[connection signal="mouse_exited" from="Panel/Slime" to="." method="_on_slime_mouse_exited"]
[connection signal="gui_input" from="Panel/Puzzle" to="." method="_on_puzzle_gui_input"]
[connection signal="mouse_exited" from="Panel/Puzzle" to="." method="_on_puzzle_mouse_exited"]
[connection signal="gui_input" from="Panel/Trap" to="." method="_on_trap_gui_input"]
[connection signal="mouse_exited" from="Panel/Trap" to="." method="_on_trap_mouse_exited"]
[connection signal="gui_input" from="Panel/Pots" to="." method="_on_pots_gui_input"]
[connection signal="mouse_exited" from="Panel/Pots" to="." method="_on_pots_mouse_exited"]
[connection signal="gui_input" from="Panel/Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_exited" from="Panel/Visuals" to="." method="_on_visuals_mouse_exited"]
[connection signal="gui_input" from="Panel/Coins" to="." method="_on_coins_gui_input"]
[connection signal="mouse_exited" from="Panel/Coins" to="." method="_on_coins_mouse_exited"]
[connection signal="gui_input" from="Panel/Dash" to="." method="_on_dash_gui_input"]
[connection signal="mouse_exited" from="Panel/Dash" to="." method="_on_dash_mouse_exited"]
[connection signal="gui_input" from="Panel/Error" to="." method="_on_error_gui_input"]
[connection signal="mouse_exited" from="Panel/Error" to="." method="_on_error_mouse_exited"]
[connection signal="gui_input" from="Panel/Story" to="." method="_on_story_gui_input"]
[connection signal="mouse_exited" from="Panel/Story" to="." method="_on_story_mouse_exited"]
[connection signal="gui_input" from="Panel/Skip" to="." method="_on_skip_gui_input"]
[connection signal="mouse_exited" from="Panel/Skip" to="." method="_on_skip_mouse_exited"]
